2008-08-16  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	* src/protocol.[ch]
	* src/scrobbler.[ch]:
	More type renames:
	lastfm_session -> LastfmSession
	lastfm_err     -> LastfmErr

2008-08-16  Alberto Garcia  <agarcia@igalia.com>

	* src/scrobbler.h
	* src/scrobbler.c (rsp_set_nowplaying, rsp_scrobble): Return a
	value indicating whether the operation was successful or not.

2008-08-16  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.[ch]
	* src/dbus.[ch]
	* src/imstatus.[ch]
	* src/metadata.[ch]
	* src/playlist.[ch]
	* src/protocol.[ch]
	* src/scrobbler.[ch]
	* src/uimisc.[ch]
	* src/vgl-main-window.[ch]
	* src/vgl-tray-icon.[ch]
	* src/xmlrpc.[ch]:
	Data types renamed:
	lastfm_pls   -> LastfmPls
	lastfm_track -> LastfmTrack
	rsp_session  -> RspSession
	rsp_rating   -> RspRating

2008-08-13  Alberto Garcia  <agarcia@igalia.com>

	* po/lv.po: Update translation (by Pēteris Caune)

2008-08-10  Alberto Garcia  <agarcia@igalia.com>

	* po/de.po, po/fi.po, po/fr.po, po/gl.po, po/it.po, po/lv.po:
	Update translations.

2008-08-07  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac: Define desktopentrydir in Moblin build

2008-08-06  Alberto Garcia  <agarcia@igalia.com>

	* src/dbus.h: Fix compilation error.

2008-07-25  Alberto Garcia  <agarcia@igalia.com>

	* README
	* scripts/vagalumectl
	* src/radio.c
	* src/radio.h
	* src/vgl-main-window.c
	* vagalumectl.1
	* po/vagalume.pot, po/de.po, po/es.po, po/fi.po, po/fr.po
	* po/gl.po, po/it.po, po/lv.po, po/pt.po, po/pt_BR.po:
	Rename "personal radio" to "library" as per Last.fm update

	* po/fi.po, po/pt.po: Add missing ellipsis

2008-07-23  Alberto Garcia  <agarcia@igalia.com>

	* src/userconfig.c
	(lastfm_usercfg_read, lastfm_usercfg_write, get_cfg_filename)
	(xml_get_bool, xml_get_string, xml_add_bool, xml_add_string):
	New, XML-based configuration file. The old file is converted to
	the new one and deleted if necessary.
	(lastfm_old_usercfg_read, get_old_cfg_filename):